--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "csv-parser": "^2.3.3",
+    "objects-to-csv": "^1.3.6",
     "puppeteer": "^5.2.1"
   }
 }
